--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
         <span>L</span>
         <span>L</span>
         <span>O</span>
+        <span>S</span>
+        <span>h</span>
+        <span>e</span>
+        <span>y</span>
+        <span>y</span>
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!</span>
+        <span>Aku ada hadiah spesial buat kamu!! S'moga kamu suka yaaa !</span>
     </div>
     <div class="button">
         <button>
