--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>S</span>
+        <span>V</span>
         <span>h</span>
         <span>e</span>
-        <span>y</span>
-        <span>y</span>
+        <span>r</span>
+        <span>r</span>
+        <span>e</span>
+        <span>n</span>
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!! S'moga kamu suka yaaa !</span>
+        <span>Aku ada hadiah perkenalan spesial buat kamu!! </span>
+        <span> S'moga kamu suka yaaa! </span>
     </div>
     <div class="button">
         <button>
